--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -27,7 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">फोल्डर बनाएं</string>
     <string name="create_new_document">नया दस्तावेज़ बनाएं</string>
     <string name="move">स्थान-परिवर्तन</string>
-    <string name="copy">कॉपी करें</string>
+    <string name="copy">प्रतिलिपि बनाएँ</string>
     <string name="info">जानकारी</string>
     <string name="file_folder_already_exists_please_use_a_different_name">फाइल या फोल्डर पहले से उप्ल्व्द उप्ल्व्द है! दूसरा नाम सोचे</string>
     <string name="import_from_device">डिवाइस से आयात करें</string>
@@ -62,13 +62,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select_entries">प्रविष्टियों का चयन करें</string>
     <string name="one_item_selected">एक आइटम चयनित</string>
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d आइटम चयनित</string>
+    <string name="hide_statusbar_at_this_view">इस दृश्य पर स्टेटस बार छुपाएं</string>
     <string name="hide_statusbar">स्थिति पट्टी छुपाएँ</string>
     <string name="name">नाम</string>
     <string name="url_or_path">URL / पथ</string>
     <string name="insert_link">लिंक सम्मिलित करें</string>
     <string name="insert_image">चित्र डालें</string>
     <string name="contributors">योगदानकर्ता</string>
-    <string name="save_location">स्थान संरक्षण</string>
+    <string name="save_location">सहेजने का स्थान</string>
     <string name="select_storage_folder">स्टोरेज फोल्डर चुनें</string>
     <string name="licenses">लाइसेंस</string>
     <string name="changelog">परिवर्तन खाता</string>
@@ -109,17 +110,38 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive">संग्रह</string>
     <string name="add_task">कार्य जोड़ें</string>
     <string name="document_to_be_loaded_and_saved_as_witharg">दस्तावेज़ को \"%s\" के रूप में लोड और सहेजा जाना चाहिए</string>
+    <string name="refresh">रिफ्रेश</string>
+    <string name="create_shortcut">शॉर्टकट बनाएँ</string>
     <string name="create_note" needed="false">नोट बनाएं</string>
     <string name="special_documents" needed="false">विशेष दस्तावेज</string>
+    <string name="keep_screen_on" needed="false">स्क्रीन चालू रखें</string>
     <string name="back_to_previous_folder" needed="false">पिछले फ़ोल्डर पर वापस जाएं</string>
     <string name="app_settings" needed="false">एप्लिकेशन सेटिंग</string>
     <string name="editor_settings" needed="false">संपादक सेटिंग्स</string>
     <string name="remember_last_folder_location_on_startup" needed="false">स्टार्टअप पर अंतिम फ़ोल्डर स्थान याद रखें</string>
     <string name="number_of_files_witharg" needed="false">फ़ाइलों की संख्या: %d</string>
     <string name="main_view">प्रमुख राय</string>
+    <string name="syntax_highlighting">सिंटेक्स हाईलाइट</string>
+    <string name="format">स्वरूप</string>
+    <string name="contexts">प्रसंग</string>
+    <string name="project">प्रोजेक्ट</string>
+    <string name="projects">परियोजनाएं</string>
     <string name="none">कुछ नहीं</string>
     <string name="other">अन्य</string>
+    <string name="empty_file">खाली फ़ाइल</string>
+    <string name="underline">रेखांकित</string>
+    <string name="use_monospace_for_code">Code के लिए एक Monospace फ़ॉन्ट का उपयोग करें</string>
     <string name="general">सामान्य</string>
+    <string name="resources">संसाधने</string>
+    <string name="line_spacing">पंक्ति अंतराल</string>
+    <string name="vertical_alignment">लंबवत संरेखण</string>
+    <string name="horizontal_alignment">क्षैतिज संरेखण</string>
+    <string name="left">बाएँ</string>
+    <string name="right">दाएँ</string>
+    <string name="top">ऊपर</string>
+    <string name="bottom">निचे</string>
+    <string name="center">मध्य</string>
+    <string name="clipboard">क्लिपबोर्ड</string>
     <string name="open_source_licenses">खुला स्रोत लाइसेंस</string>
     <string name="rate_this_app">इस ऐप्लिकेशन को रेट करे</string>
     <string name="translate">अनुवाद करें</string>
@@ -130,13 +152,73 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="help_translating_this_app">इस ऐप का अन्य भाषाओं में अनुवाद करें</string>
     <string name="source_code">सोर्स कोड</string>
     <string name="project_license">परियोजना लाइसेंस</string>
+    <string name="descending">घटते क्रम में</string>
+    <string name="ascending">बढ़ते क्रम में</string>
     <string name="location">स्थान</string>
+    <string name="directory">निर्देशिका</string>
+    <string name="recently_viewed_documents">अभी देखे डाक्यूमेंट्स</string>
+    <string name="details">विवरण</string>
+    <string name="calendar">पंचांग</string>
     <string name="error_picture_selection">कोई चित्र नहीं चुना गया था</string>
     <string name="description">विवरण</string>
     <string name="edit_picture">चित्र संपादित करें</string>
+    <string name="math">गणित</string>
+    <string name="table_of_contents">विषय-सूची</string>
     <string name="miscellaneous">कई तरह का</string>
+    <string name="no_calendar_app_is_installed">कोई कैलेंडर ऐप स्थापित नहीं है</string>
     <string name="background">पृष्ठभूमि</string>
     <string name="font">फ़ॉन्ट</string>
+    <string name="result">परिणाम</string>
+    <string name="just_date">केवल दिनांक</string>
+    <string name="last_used">आखिरी बार इस्तेमाल</string>
     <string name="close">बंद</string>
+    <string name="cancel">रद्द करना</string>
+    <string name="folder_first">फ़ोल्डर पहले</string>
+    <string name="go_to">इस पर चलें</string>
+    <string name="internal_storage">आंतरिक स्टोरेज</string>
+    <string name="navigationbar_color">नेविगेशन पट्टी रंग</string>
+    <string name="black">काला</string>
+    <string name="white">सफ़ेद</string>
+    <string name="view">दृश्य</string>
+    <string name="view_mode">दृश्य मोड</string>
+    <string name="edit_mode">संपादन मोड</string>
+    <string name="share_into">साझा करें</string>
     <string name="favourite">पसंदीदा</string>
+    <string name="favourites">पसंदीदा</string>
+    <string name="please_wait">कृपया प्रतीक्षा करें</string>
+    <string name="reload">फिर से लोड करें</string>
+    <string name="template">खाका</string>
+    <string name="send_debug_log">डिबग लग्स को भेजें</string>
+    <string name="print_pdf">PDF प्रिंट करें</string>
+    <string name="current">प्रगति पर</string>
+    <string name="heading_1">शीर्षक 1</string>
+    <string name="heading_2">शीर्षक २</string>
+    <string name="heading_3">शीर्षक 3</string>
+    <string name="heading_4">हेडिंग ४</string>
+    <string name="heading_5">शीर्षक ५</string>
+    <string name="heading_6">शीर्षक ६</string>
+    <string name="bold">बोल्ड</string>
+    <string name="italic">तिरछा</string>
+    <string name="highlighted">हाइलाइट्स</string>
+    <string name="inline_code">कोडित</string>
+    <string name="horizontal_line">क्षैतिज रेखा</string>
+    <string name="link_color">लिंक रंग</string>
+    <string name="add_context">संदर्भ जोड़ें</string>
+    <string name="add_project">प्रॉजेक्ट जोड़े</string>
+    <string name="sort_alphabetically">वर्णानुक्रम के अनुसार लगाएं</string>
+    <string name="choose_format">\' स्वरूप \' चुनें</string>
+    <string name="selected">चयनित</string>
+    <string name="back">पीछे</string>
+    <string name="essential">अनिवार्य</string>
+    <string name="drag">खींचना</string>
+    <string name="created">बनाया गया</string>
+    <string name="file_encryption_password">फाइल कूटबद्ध करने के लिए कूटशब्द</string>
+    <string name="code_block">कोड ब्लॉक</string>
+    <string name="file_description_format">विवरण फॉर्मेट</string>
+    <string name="search_for">इसे खोजें</string>
+    <string name="replace_with">से बदलें</string>
+    <string name="matches">मिलता-जुलता</string>
+    <string name="due_overdue">अतिदेय</string>
+    <string name="due_today">आज ही देय</string>
+    <string name="completed">पूर्ण</string>
 </resources>
