--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -288,6 +288,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_sdcard">應用程式資料(SD卡)</string>
     <string name="internal_storage">內部儲存空間</string>
     <string name="open_the_document_from_main_view">您可以從底部的主檢視區藉由檔案管理程式或啟動器開啟文件，另外還有一個選項是分享附加的文字給Markor。</string>
+    <string name="notebook_is_the_home_of_your_files">「筆記本」是Markor啟動時傳輸到檔案管理員中的資料夾，也是您檔案的主資料夾。</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">「快速」是迅速記錄的選項，以Markdown格式存放在預設位置。&gt;Notebook/QuickNote.md&lt;您可以在設定裡自訂檔案途徑。</string>
     <string name="navigationbar_color">導覽列顏色</string>
     <string name="black">黑色</string>
     <string name="white">白色</string>
