--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -305,6 +305,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="please_wait">請稍等</string>
     <string name="app_start_folder">程式啟動時跳轉資料夾</string>
     <string name="tab_width">製表符寬度</string>
+    <string name="amount_of_space_for_tab">表格需要的空間字元數量</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">所選的檔案可能是純文字文件，您想用文字編輯器或是他程式開啟？\n\n執行檔案無法開啟，如果不確定，以其他程式開啟。</string>
+    <string name="list_in_recent_files">最近使用文件的清單</string>
     <string name="reload">重新下載</string>
     <string name="wrap_words">文字折行</string>
     <string name="always_open_with_this_app">永遠使用此應用程式開啟</string>
