[ci skip] Update translations (Sorani (Kurdish))

--- a/app/src/main/res/values-ckb/strings.xml
+++ b/app/src/main/res/values-ckb/strings.xml
@@ -148,7 +148,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="more_info_and_help">زانیاری زیاتر و هاوکاری</string>
     <string name="report_bugs">هەڵەیەک ڕاپۆرت بکە</string>
     <string name="join_community">بەشداربوون لە کۆڕبەند</string>
-    <string name="help_translating_this_app">کراوە بە کوردی لەلایەن گۆران غەریب - کوردرۆید</string>
+    <string name="help_translating_this_app">کراوە بە کوردی لەلایەن گۆران غەریب - کوردتێڪ</string>
     <string name="source_code">کۆدی سەرچاوە</string>
     <string name="project_license">مۆڵەتی پڕۆژە</string>
     <string name="descending">ژێرەوسەر</string>
