--- a/app/src/main/res/values-ckb/strings.xml
+++ b/app/src/main/res/values-ckb/strings.xml
@@ -144,11 +144,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="clipboard">لەبەرگیراوەکان</string>
     <string name="open_source_licenses">مەرج و مۆڵەتی سەرچاوەکان</string>
     <string name="rate_this_app">هەڵسەنگاندنی بەرنامەکە</string>
-    <string name="translate">وەرگێڕاوە بۆ کوردی لەلایەن GoRaN</string>
+    <string name="translate">وەرگێڕدراوە بۆ کوردی لەلایەن GoRaN</string>
     <string name="more_info_and_help">زانیاری زیاتر و هاوکاری</string>
     <string name="report_bugs">هەڵەیەک ڕاپۆرت بکە</string>
     <string name="join_community">بەشداربوون لە کۆڕبەند</string>
-    <string name="help_translating_this_app">کراوە بە کوردی لەلایەن گۆران غەریب - کوردرۆید</string>
+    <string name="help_translating_this_app">کراوە بە کوردی لەلایەن گۆران غەریب - کوردتێڪ</string>
     <string name="source_code">کۆدی سەرچاوە</string>
     <string name="project_license">مۆڵەتی پڕۆژە</string>
     <string name="descending">ژێرەوسەر</string>
