--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -12,7 +12,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="settings">ସେଟିଂସମୂହ</string>
     <string name="light">ହାଲୁକା</string>
-    <string name="dark">ଗାଢ଼</string>
+    <string name="dark">ଗାଢ଼</string>
     <string name="delete">ବିଲୋପ କରନ୍ତୁ</string>
     <string name="appearance">ରୂପ</string>
     <string name="rename">ନାମ ବଦଳାନ୍ତୁ</string>
@@ -64,7 +64,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="changelog">ପରିବର୍ତ୍ତନ ଲଗ୍</string>
     <string name="more_info">ଅଧିକ ସୂଚନା</string>
     <string name="show_license_of_the_app">ଆପ୍ ର ଲାଇସେନ୍ସ ଦେଖାନ୍ତୁ</string>
-    <string name="language_change_restart_description">ଏହି ଆପ୍ ର ଭାଷା ପରିବର୍ତ୍ତନ କରନ୍ତୁ। ପରିବର୍ତ୍ତନଗୁଡ଼ିକ କାର୍ଯ୍ୟକାରୀ ହେବା ପାଇଁ ଆପ୍ ପୁନଃଆରମ୍ଭ କରନ୍ତୁ</string>
+    <string name="language_change_restart_description">ଏହି ଆପ୍ ର ଭାଷା ବଦଳାନ୍ତୁ। ପରିବର୍ତ୍ତନଗୁଡ଼ିକ କାର୍ଯ୍ୟକାରୀ ହେବା ପାଇଁ ଆପ୍ ପୁନଃଆରମ୍ଭ କରନ୍ତୁ</string>
     <string name="language">ଭାଷା</string>
     <string name="error_need_storage_permission_to_save_documents">ଡକ୍ୟୁମେଣ୍ଟଗୁଡ଼ିକ ସଞ୍ଚୟ କରିବା ପାଇଁ ଷ୍ଟୋରେଜ୍ ଅନୁମତି ଆବଶ୍ୟକ</string>
     <string name="open_with">ଏହା ସହ ଖୋଲନ୍ତୁ</string>
@@ -164,6 +164,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="type">ପ୍ରକାର</string>
     <string name="folder">ଫୋଲ୍ଡର୍</string>
     <string name="font">ଫଣ୍ଟ</string>
+    <string name="enter_or_select_format">ଫର୍ମାଟ୍ ପ୍ରବେଶ ବା ଚୟନ କରନ୍ତୁ</string>
     <string name="pick_date">ତାରିଖ ବାଛନ୍ତୁ</string>
     <string name="pick_time">ସମୟ ବାଛନ୍ତୁ</string>
     <string name="just_time">କେବଳ ସମୟ</string>
@@ -206,6 +207,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_5">ଶିରୋନାମା ୫</string>
     <string name="heading_6">ଶିରୋନାମା ୬</string>
     <string name="choose_format">ଫର୍ମାଟ୍ ବାଛନ୍ତୁ</string>
+    <string name="expand_collapse">ପ୍ରସାରଣ / ସଙ୍କୋଚନ</string>
+    <string name="essential">ଅତ୍ୟାବଶ୍ୟକ</string>
     <string name="load_default_settings">ଡିଫଲ୍ଟ ସେଟିଂସ୍ ଲୋଡ୍ କରନ୍ତୁ</string>
     <string name="created">ତିଆରି କରାଗଲା</string>
     <string name="file_encryption_password">ଫାଇଲ୍ ଏନକ୍ରିପସନ୍ ପାସ୍‍ୱାର୍ଡ଼</string>
