--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -278,13 +278,19 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="cancel">取消</string>
     <string name="do_you_like_this_project_want_donate_to_keep_alive">喜歡這個專案嗎？希望它繼續改善而且問題得到解決嗎？\n\n開發應用程式以及撰寫相關部落格文章都需要很多時間！如果你想要幫忙讓專案可以繼續，請考慮小額捐款！\n\n這個專案是在閒暇時間開發的，完全免費，並且沒有任何廣告！</string>
     <string name="app_start_tab">啟動顯示頁面</string>
+    <string name="tab_to_select_at_start">起始程式時，點選分頁</string>
     <string name="swipe_to_change_mode">滑動以更改模式</string>
+    <string name="swipe_to_change_to_edit_or_view_mode">滑動以變更編輯或檢視模式(現行模式的反向操作)</string>
     <string name="folder_first">資料夾優先</string>
     <string name="go_to">前往</string>
     <string name="appdata_public">應用程式資料(公開)</string>
     <string name="appdata_private">應用程式資料(私人)</string>
     <string name="appdata_sdcard">應用程式資料(SD卡)</string>
     <string name="internal_storage">內部儲存空間</string>
+    <string name="open_the_document_from_main_view">您可以從底部的主檢視區藉由檔案管理程式或啟動器開啟文件，另外還有一個選項是分享附加的文字給Markor。</string>
+    <string name="notebook_is_the_home_of_your_files">「筆記本」是Markor啟動時傳輸到檔案管理員中的資料夾，也是您檔案的主資料夾。</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">「快速」是迅速記錄的選項，以Markdown格式存放在預設位置&gt;Notebook/QuickNote.md&lt;，您可以在設定裡自訂其途徑。</string>
+    <string name="todo_is_the_easiest_way_">ToDo可以用來管理您的工作任務，預設位置是&gt;Notebook/todo.txt&lt;，您可以在設定裡自訂其途徑。</string>
     <string name="navigationbar_color">導覽列顏色</string>
     <string name="black">黑色</string>
     <string name="white">白色</string>
@@ -292,12 +298,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="view_mode">檢視模式</string>
     <string name="edit_mode">編輯模式</string>
     <string name="mount_storage">掛接儲存裝置</string>
+    <string name="application_needs_access_to_storage_mount_it">存取儲存空間需要權限，儲存空間掛載後才能存取；在跳出的對話框選擇儲存的位置，按下確認。</string>
     <string name="share_into">分享至</string>
     <string name="favourite">新增至我的最愛</string>
     <string name="favourites">最愛列表</string>
     <string name="please_wait">請稍等</string>
     <string name="app_start_folder">程式啟動時跳轉資料夾</string>
     <string name="tab_width">製表符寬度</string>
+    <string name="amount_of_space_for_tab">表格需要的空間字元數量</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">所選的檔案可能是純文字文件，您想用文字編輯器或是他程式開啟？\n\n執行檔案無法開啟，如果不確定，以其他程式開啟。</string>
+    <string name="list_in_recent_files">最近使用文件的清單</string>
     <string name="reload">重新下載</string>
     <string name="wrap_words">文字折行</string>
     <string name="always_open_with_this_app">永遠使用此應用程式開啟</string>
