--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -53,7 +53,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select">Elekti</string>
     <string name="create">Krei</string>
     <string name="select_entries">Elekti elementojn</string>
-    <string name="name">Nomo</string>
+    <string name="name">Dosiernomo</string>
     <string name="insert_link">Enmeti Ligilon</string>
     <string name="insert_image">Enmeti Bildon</string>
     <string name="contributors">Kontribuantoj</string>
