[ci skip] Update translations (Odia)

--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -93,8 +93,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="clear">ଖାଲି କରନ୍ତୁ</string>
     <string name="due_date">ଧାର୍ଯ୍ୟ ତାରିଖ</string>
     <string name="current_date">ସମ୍ପ୍ରତି ତାରିଖ</string>
-    <string name="add_task">ଟାସ୍କ ଯୋଡ଼ନ୍ତୁ</string>
-    <string name="add_x_witharg">%s ଯୋଡ଼ନ୍ତୁ</string>
+    <string name="add_task">ଟାସ୍କ ଯୋଡ଼ନ୍ତୁ</string>
+    <string name="add_x_witharg">%s ଯୋଡ଼ନ୍ତୁ</string>
     <string name="refresh">ସତେଜ କରନ୍ତୁ</string>
     <string name="create_shortcut">ସର୍ଟକଟ୍‌ ସୃଷ୍ଟି କରନ୍ତୁ</string>
     <string name="tried_to_create_shortcut_for_this_notice">ଆପଣଙ୍କ ହୋମ୍ ସ୍କ୍ରିନରେ ଏକ ସର୍ଟକଟ୍ ସୃଷ୍ଟି କରିବାକୁ ଚେଷ୍ଟା କରିଛି। ଧ୍ୟାନ ଦିଅନ୍ତୁ ଯେ କିଛି ଉନ୍ମୋଚକ ଏହାକୁ ସମର୍ଥନ କରିନପାରେ।</string>
